--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "up": "drizzle-kit up:pg"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
+    "radix-ui": "^1.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
